--- a/modules/gadgeteer/drivers/Makefile.in
+++ b/modules/gadgeteer/drivers/Makefile.in
@@ -135,6 +135,7 @@ endif
 
 # Subdirectories used for recursion through the source tree.
 SUBDIR=	5DT/DataGlove			\
+	Ascension/Flock 		\
 	Ascension/MotionStar		\
 	Fakespace/PinchGlove		\
 	Immersion/IBox			\
@@ -149,10 +150,6 @@ SUBDIR=	5DT/DataGlove			\
 	Polhemus/Fastrak		\
 	VRCO/TrackdAPI			\
 	VirtualTechnologies/CyberGlove
-
-ifneq (@PLATFORM@, IRIX)
-SUBDIR+=	Ascension/Flock
-endif
 
 # =============================================================================
 # Library targets.  The default is 'debug' as defined above.  The steps for 
