--- a/modules/gadgeteer/gadgeteer-config.in
+++ b/modules/gadgeteer/gadgeteer-config.in
@@ -89,12 +89,12 @@ $Win32 = (defined($ENV{'OS'}) && $ENV{'OS'} =~ /^win/i);
 
 my $base_dir = '';
 
-# Set the location of the collection of dependencies.  If $GADGET_DEPS_DIR is
+# Set the location of the collection of dependencies.  If $VJ_DEPS_DIR is
 # not defined, then $deps_dir will be an empty string.  If the dependencies
 # are installed in $GADGET_BASE_DIR, then the user gets the right compiler and
 # linker path options for free.  Otherwise, it is up to the user to provide
 # those paths.
-my $deps_dir = "$ENV{'GADGET_DEPS_DIR'}" if defined($ENV{'GADGET_DEPS_DIR'});
+my $deps_dir = "$ENV{'VJ_DEPS_DIR'}" if defined($ENV{'VJ_DEPS_DIR'});
 
 # Get the directory where this script is located.
 if ( defined($ENV{'GADGET_BASE_DIR'}) )
