--- a/juggler/vc7/Gadgeteer/Gadgeteer.vcproj
+++ b/juggler/vc7/Gadgeteer/Gadgeteer.vcproj
@@ -38,7 +38,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="jccl_d.lib vpr_d.lib cppdom_d.lib  libnspr4.lib libplc4.lib ws2_32.lib comctl32.lib gdi32.lib user32.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/gadget_d.dll"
-				Version="0.14.4"
+				Version="0.15.0"
 				LinkIncremental="0"
 				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib&quot;;..\JCCL\DebugDLL;..\VPR\DebugDLL"
 				GenerateDebugInformation="TRUE"
@@ -69,6 +69,7 @@
 			CharacterSet="2">
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/Zm800"
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
@@ -90,7 +91,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="jccl.lib vpr.lib cppdom.lib libnspr4.lib libplc4.lib ws2_32.lib comctl32.lib gdi32.lib user32.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/gadget.dll"
-				Version="0.14.4"
+				Version="0.15.0"
 				LinkIncremental="0"
 				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib&quot;;..\JCCL\ReleaseDLL;..\VPR\ReleaseDLL"
 				GenerateDebugInformation="FALSE"
@@ -199,6 +200,9 @@
 			</File>
 			<File
 				RelativePath="..\..\modules\gadgeteer\gadget\Type\Glove.cpp">
+			</File>
+			<File
+				RelativePath="..\..\modules\gadgeteer\gadget\Type\GloveData.cpp">
 			</File>
 			<File
 				RelativePath="..\..\modules\gadgeteer\gadget\Type\GloveGesture.cpp">
@@ -416,6 +420,9 @@
 			</File>
 			<File
 				RelativePath="..\..\modules\gadgeteer\gadget\Type\Glove.h">
+			</File>
+			<File
+				RelativePath="..\..\modules\gadgeteer\gadget\Type\GloveData.h">
 			</File>
 			<File
 				RelativePath="..\..\modules\gadgeteer\gadget\Type\GloveGesture.h">
