--- a/modules/vrjuggler/samples/OSG/simple/osgNav/osgNav.vcproj
+++ b/modules/vrjuggler/samples/OSG/simple/osgNav/osgNav.vcproj
@@ -3,7 +3,7 @@
 	ProjectType="Visual C++"
 	Version="7.00"
 	Name="osgNav"
-	ProjectGUID="{783B5239-8ABD-4E9F-88FD-202FAE824B49}"
+	ProjectGUID="{8346115D-65A0-42F9-859F-77C649F8FD1C}"
 	SccProjectName=""
 	SccLocalPath="">
 	<Platforms>
@@ -13,38 +13,47 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory=".\Debug"
-			IntermediateDirectory=".\Debug"
+			OutputDirectory="Debug"
+			IntermediateDirectory="Debug"
 			ConfigurationType="1"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="-Zm400"
+				AdditionalOptions="/Zm800"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;&quot;$(VJ_BASE_DIR)/include&quot;;&quot;$(OSGHOME)/include&quot;;&quot;$(NSPR_ROOT)/include/nspr&quot;"
-				PreprocessorDefinitions="WIN32,_WINDOWS,WINVER=0x0400,_WIN32_WINDOWS=0x0410,_WIN32_WINNT=0x0400,_DEBUG,FL_DLL"
+				AdditionalIncludeDirectories=".;&quot;$(OSGHOME)\include&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;"
+				PreprocessorDefinitions="_DEBUG;_CONSOLE;WIN32"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
+				BufferSecurityCheck="FALSE"
 				RuntimeTypeInfo="TRUE"
-				AssemblerListingLocation=".\Debug/"
-				ObjectFile=".\Debug/"
-				ProgramDataBaseFileName=".\Debug/"
-				DebugInformationFormat="4"/>
+				UsePrecompiledHeader="0"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation=""
+				ObjectFile="$(IntDir)/"
+				ProgramDataBaseFileName="$(IntDir)/"
+				WarningLevel="3"
+				DebugInformationFormat="4"
+				CompileAs="2"
+				DisableSpecificWarnings="4244;4251;4275;4290"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vrj.lib vrj_ogl.lib gadget.lib jccl.lib vpr.lib libnspr4.lib libplc4.lib MSVCPRTD.lib MSVCRTD.lib winmm.lib wsock32.lib osgd.lib osgUtild.lib osgDBd.lib opengl32.lib"
-				OutputFile=".\Debug/osgNav.exe"
+				AdditionalOptions="/MACHINE:I386"
+				AdditionalDependencies="vrj_d.lib vrj_ogl_d.lib gadget_d.lib jccl_d.lib vpr_d.lib libnspr4.lib libplc4.lib comctl32.lib ws2_32.lib osgd.lib osgUtild.lib osgDBd.lib opengl32.lib glu32.lib $(NOINHERIT)"
+				OutputFile="$(OutDir)/osgNav.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="$(OSGHOME)/lib;$(VJ_BASE_DIR)/lib/debug;$(NSPR_ROOT)/lib"
-				IgnoreAllDefaultLibraries="TRUE"
+				SuppressStartupBanner="TRUE"
+				AdditionalLibraryDirectories="&quot;$(OSGHOME)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
 				GenerateDebugInformation="TRUE"
-				ProgramDatabaseFile=".\Debug/osgNav.pdb"/>
+				ProgramDatabaseFile="$(OutDir)/osgNav.pdb"
+				SubSystem="1"
+				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"
-				TypeLibraryName=".\Debug/osgNav.tlb"/>
+				TypeLibraryName="$(OutDir)/osgNav.tlb"/>
 			<Tool
 				Name="VCPostBuildEventTool"/>
 			<Tool
@@ -62,37 +71,47 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory=".\Release"
-			IntermediateDirectory=".\Release"
+			OutputDirectory="Release"
+			IntermediateDirectory="Release"
 			ConfigurationType="1"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalOptions="-Zm1200"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories=".;&quot;$(VJ_BASE_DIR)/include&quot;;&quot;$(OSGHOME)/include&quot;;&quot;$(NSPR_ROOT)/include/nspr&quot;"
-				PreprocessorDefinitions="WIN32,_WINDOWS,WINVER=0x0400,_WIN32_WINDOWS=0x0410,_WIN32_WINNT=0x0400,_OPT,FL_DLL"
+				OmitFramePointers="FALSE"
+				AdditionalIncludeDirectories=".;&quot;$(OSGHOME)\include&quot;;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;"
+				PreprocessorDefinitions="_OPT;NDEBUG;_CONSOLE;WIN32"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
+				BufferSecurityCheck="FALSE"
 				EnableFunctionLevelLinking="TRUE"
 				RuntimeTypeInfo="TRUE"
-				AssemblerListingLocation=".\Release/"
-				ObjectFile=".\Release/"
-				ProgramDataBaseFileName=".\Release/"/>
+				UsePrecompiledHeader="0"
+				PrecompiledHeaderFile=""
+				AssemblerListingLocation=""
+				ObjectFile="$(IntDir)/"
+				ProgramDataBaseFileName="$(IntDir)/"
+				WarningLevel="3"
+				SuppressStartupBanner="TRUE"
+				CompileAs="2"
+				DisableSpecificWarnings="4244;4251;4275;4290"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vrj.lib vrj_ogl.lib gadget.lib jccl.lib vpr.lib libnspr4.lib libplc4.lib MSVCPRTD.lib MSVCRTD.lib kernel32.lib user32.lib gdi32.lib uuid.lib wsock32.lib osg.lib osgUtil.lib osgDB.lib glut32.lib opengl32.lib"
-				OutputFile=".\Release/osgNav.exe"
+				AdditionalOptions="/MACHINE:I386"
+				AdditionalDependencies="vrj.lib vrj_ogl.lib gadget.lib jccl.lib vpr.lib libnspr4.lib libplc4.lib comctl32.lib ws2_32.lib osg.lib osgUtil.lib osgDB.lib opengl32.lib glu32.lib $(NOINHERIT)"
+				OutputFile="$(OutDir)/osgNav.exe"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="$(OSGHOME)/lib,$(VJ_BASE_DIR)/lib/opt,$(NSPR_ROOT)/lib"
-				IgnoreAllDefaultLibraries="TRUE"
-				ProgramDatabaseFile=".\Release/osgNav.pdb"/>
+				SuppressStartupBanner="TRUE"
+				AdditionalLibraryDirectories="&quot;$(OSGHOME)\lib&quot;;&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
+				ProgramDatabaseFile="$(OutDir)/osgNav.pdb"
+				SubSystem="1"
+				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"
-				TypeLibraryName=".\Release/osgNav.tlb"/>
+				TypeLibraryName="$(OutDir)/osgNav.tlb"/>
 			<Tool
 				Name="VCPostBuildEventTool"/>
 			<Tool
@@ -114,10 +133,10 @@
 			Name="Source Files"
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat">
 			<File
-				RelativePath=".\OsgNav.cpp">
+				RelativePath="OsgNav.cpp">
 			</File>
 			<File
-				RelativePath=".\main.cpp">
+				RelativePath="main.cpp">
 			</File>
 		</Filter>
 		<Filter
@@ -125,6 +144,9 @@
 			Filter="h;hpp;hxx;hm;inl">
 			<File
 				RelativePath="OsgNav.h">
+			</File>
+			<File
+				RelativePath="nav.h">
 			</File>
 		</Filter>
 		<Filter
